external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/basic_invalid_environment2/Move.snap
---
source: crates/move-package-alt/tests/manifest_parsing_tests.rs
---
Err(TOML parse error at line 8, column 1
  |
8 | ~124512 = "35834a8a"
  | ^
Could not parse the line

)
